Task : Searching dropdown show with images

--- a/packages/rma-pos/src/app/sales-ui/add-sales-invoice/add-pos-invoice.html
+++ b/packages/rma-pos/src/app/sales-ui/add-sales-invoice/add-pos-invoice.html
@@ -332,15 +332,15 @@
           
                 >
                 <mat-option
-                *ngFor="let item of gridNames"
+                *ngFor="let item of searchData"
                 [value]="item.item_name"
-                (click)="findValue(item.item_code)"
+                (click)="findValue(item.name)"
               >
                 {{ item.item_name}}
                 <small>
                   <ion-img 
                     class="search-item-image prd-slid-img" 
-                    src='http://0.0.0.0:8000{{item.website_image}}'>
+                    src="http://0.0.0.0:8000{{item.website_image}}">
                   </ion-img>
                 </small>
                 
