--- a/packages/rma-pos/src/global.scss
+++ b/packages/rma-pos/src/global.scss
@@ -559,7 +559,7 @@ ion-card-title.ion-inherit-color.md.hydrated{padding-bottom: 16px;}
   border-radius: 0;
   padding: 20px 25px;
   background-color: #499bc0 !important;
-  color: #000 !important;
+  color: #fff !important;
   font-weight: 600;
 }
 .main-filed-pos-form {
