Task: Multiple search functionality

--- a/packages/rma-pos/src/app/sales-ui/add-sales-invoice/add-pos-invoice.html
+++ b/packages/rma-pos/src/app/sales-ui/add-sales-invoice/add-pos-invoice.html
@@ -50,7 +50,7 @@
                   <input
                     required
                     type="text"
-                    placeholder="Select Customer"
+                    placeholder="Customer Name"
                     matInput
                     formControlName="customer"
                     [matAutocomplete]="auto"
@@ -97,7 +97,7 @@
                   <input
                     required
                     type="text"
-                    placeholder="Select Mobile No"
+                    placeholder="Mobile No"
                     matInput
                     formControlName="mobileNo"
                     (focusout)="validateInput(f.mobileNo, territoryList)"
