--- a/packages/rma-pos/src/app/sales-ui/add-sales-invoice/customer-create-dialog/customer-create-dialog.component.html
+++ b/packages/rma-pos/src/app/sales-ui/add-sales-invoice/customer-create-dialog/customer-create-dialog.component.html
@@ -154,7 +154,7 @@
   <div mat-dialog-actions>
 
     <button mat-button class="cancel-btn" color="primary" (click)="onNoClick()">Cancel</button>
-    <button mat-button class="confirm-btn" [mat-dialog-close]="data.age" cdkFocusInitial>Ok</button>
+    <button mat-button type= "submit" class="confirm-btn" [mat-dialog-close]="data.age" cdkFocusInitial>Ok</button>
   </div>
 
   </form>
