Task: 1)Refactor Draft table code: 2)Add missing fields 3)Make drafts unique

--- a/packages/rma-pos/src/app/sales-ui/add-sales-invoice/add-pos-invoice.html
+++ b/packages/rma-pos/src/app/sales-ui/add-sales-invoice/add-pos-invoice.html
@@ -249,7 +249,8 @@
                 </mat-error>
               </mat-form-field>
             </ion-col>
-            <ion-col>
+            <!-- Add open Draft table button -->
+            <ion-col (click)="openDraftList()">
               <ion-card-title class="invBtn">
                 <ion-text color="tertiary"> Draft Invoice List </ion-text>
               </ion-card-title>
