--- a/packages/rma-pos/src/app/sales-ui/add-sales-invoice/add-pos-invoice.html
+++ b/packages/rma-pos/src/app/sales-ui/add-sales-invoice/add-pos-invoice.html
@@ -43,7 +43,7 @@
          
         </ion-card-header>
         <ion-card-content>
-          <ion-grid class="ion-no-padding">
+          <ion-grid class="ion-no-padding topbar-form">
             <ion-row class="align">
               <ion-col>
                 <mat-form-field class="example-half-width">
@@ -263,13 +263,13 @@
               
             </ion-row>
           <ion-row class="search_bar">
+            <ion-col size-md="6" ></ion-col>
             <ion-col size-md="6" >
               <mat-form-field class="example-half-width remarks-label">
                 <mat-label>Remarks</mat-label>
                 <textarea matInput formControlName="remarks" placeholder="Cash Collected on place"></textarea>
               </mat-form-field>
             </ion-col>
-            <ion-col size-md="6" ></ion-col>
             
             </ion-row>
           </ion-grid>
@@ -311,9 +311,9 @@
     </form>
 
     <form [formGroup]="salesInvoiceItemsForm">
-      <ion-grid>
+      <ion-grid class="search_place-container">
         <ion-row class="search_place">
-          <ion-col size="6">
+          <ion-col size="6" size-sm="12">
            <mat-form-field class="search-table example-full-width">
               <mat-icon matPrefix>search</mat-icon>
               <input
@@ -329,15 +329,16 @@
               <mat-autocomplete
               autoActiveFirstOption
               #filterValue="matAutocomplete"
-      
+            class="search-dropdown"
             >
             <mat-option
             *ngFor="let item of searchData"
             [value]="item.item_name"
             (click)="findValue(item.item_code)"
           >
-
-            {{ item.item_name}}
+            <span class="option-text">
+              {{ item.item_name}}
+            </span>
             <small>
               <ion-img 
                 class="search-item-image prd-slid-img" 
@@ -402,7 +403,7 @@
               {{item.item_group}}
             </mat-chip>
         </mat-chip-list>
-        <mat-chip (click)="showMoreItems()" color="primary" selected class="more-btn"> 
+        <mat-chip *ngIf="isMoreGroupsVisible" (click)="showMoreItems()" color="primary" selected class="more-btn"> 
           More
         </mat-chip>
       </div>
@@ -410,7 +411,7 @@
       <div class="grid-container horizontal-boxes item-scroll-box" *ngIf="!isSkeletonTextVisible">
         <ion-grid>
           <ion-row class="prod-data-list" >
-            <ion-col size="3" *ngFor="let item of gridItems ">
+            <ion-col size="3" size-md="2" *ngFor="let item of gridItems ">
               <ion-card
                 class="grid-card item-prod-wrapper "
                 (click)="addFromItemsGrid(item)"
@@ -804,7 +805,7 @@
     </ion-card>  -->
 
     <form [formGroup]="paymentForm">
-      <ion-card>
+      <ion-card class="paymentForm-inner">
         <!-- <ion-card-header>
           <ion-row class="align">
             <ion-col>
